[gd_scene load_steps=5 format=3 uid="uid://la0emuxlgbr2"]

[ext_resource type="Theme" uid="uid://llta3efyve14" path="res://resources/themes/BasicMenuTheme.tres" id="1_lk48f"]
[ext_resource type="Texture2D" uid="uid://dhkpipl0ocysc" path="res://resources/images/start_menu_bg.png" id="2_7i5ie"]
[ext_resource type="FontFile" uid="uid://oxoa1t83sxb3" path="res://resources/fonts/HanChanChillRoundF.ttf" id="3_ep04s"]
[ext_resource type="Script" path="res://scenes/gui/StartMenu.gd" id="4_yhieq"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_lk48f")
script = ExtResource("4_yhieq")

[node name="Bg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7i5ie")
metadata/_edit_lock_ = true

[node name="Title" type="RichTextLabel" parent="."]
clip_contents = false
layout_mode = 2
offset_left = -89.0
offset_top = 81.0
offset_right = 1108.0
offset_bottom = 284.0
theme_override_colors/default_color = Color(0.156863, 0.156863, 0.156863, 1)
theme_override_fonts/normal_font = ExtResource("3_ep04s")
theme_override_font_sizes/normal_font_size = 200
bbcode_enabled = true
text = "[center][wave][color=#5B5A68][outline_color=#fff][outline_size=70]TA[/outline_size][/outline_color][/color][/wave]的房间"
autowrap_mode = 0

[node name="Start" type="Button" parent="."]
layout_mode = 2
offset_left = 994.0
offset_top = 334.0
offset_right = 1215.0
offset_bottom = 705.0
theme_override_font_sizes/font_size = 90
text = "开
始
游
戏"

[node name="Load" type="Button" parent="."]
visible = false
layout_mode = 2
offset_left = 994.0
offset_top = 333.0
offset_right = 1215.0
offset_bottom = 704.0
theme_override_font_sizes/font_size = 90
text = "继
续
游
戏"

[node name="Setting" type="Button" parent="."]
layout_mode = 2
offset_left = 50.0
offset_top = 938.0
offset_right = 250.0
offset_bottom = 1005.0
theme_override_font_sizes/font_size = 66
text = "设置"

[node name="Quit" type="Button" parent="."]
layout_mode = 2
offset_left = 1688.0
offset_top = 68.0
offset_right = 1888.0
offset_bottom = 135.0
theme_override_font_sizes/font_size = 66
text = "退出"

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
